# spectool

./: .gitignore  LICENSE  README.cn.md  README.en.md  README.md  SpecMatch.py  __init__.py  ccf.py  convol.cpp  convol.h  cppspecfunc.cpp  cppspecfunc.h  iccf.cpp  logccf.cpp  makefile  mathfunc.hpp  rebin.cpp  rebin.h  setup.cfg  setup.py  spec_filter.py  spec_func.py  specinfo.py  specio.py  types.cpp  types.h
spectool/: SpecMatch.py  __init__.py  ccf.py  convol.cpp  convol.h  cppspecfunc.h  iccf.cpp  ln_spec_filter.cpp  logccf.cpp  makefile  mathfunc.hpp  pyrebin.py  rebin.cpp  spec_filter.py  spec_func.py  specio.py  test.py  types.cpp  types.h
spectool/stellar/: funcPyHammer.py
spectool/test/: template_spec.txt  test_filter.py
stellar/: M5+DA7.0.fits  __init__.py  funcPyHammer.py  pyhammer_dataurl.txt  pyhammer_spectrum.py  stellar_info.txt  sync_pyhammer_data.py
test/: object_spec.txt  template_spec.txt  test_continuum.py  test_findradialvelocity.py
