[metadata]
name = spectool
version = 1.0.0
author = Zhang ZhiXiang
author_email = zhangzhixiangby@163.com
license = MIT
description = Tools for spectral analysis
keywords = astronomy, spectra, stellar, velocity
classifiers = 
    Environment :: Console
    Intended Audience :: Science/Research
    License :: MIT
    Programming Language :: Python :: 3
    Topic :: Scientific :: Astronomy

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    matplotlib
    scipy
    lmfit
    astropy
    PyAstronomy
[options.package_data]
* = *.so, *.txt

